--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "repository": "https://github.com/blakelapierre/base-angular",
   "version": "0.0.6",
   "dependencies": {
-    "angular": "^1.4.1"
+    "angular": "^1.4.1",
+    "angular-animate": "^1.4.2",
+    "angular-route": "^1.4.2"
   },
   "devDependencies": {
     "babelify": "^6.1.2",
